cleanup, scrollbar width fix

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -111,6 +111,7 @@
     } */
 
     ::-webkit-scrollbar {
+        width: min(0.5rem, 0.5vw);
         min-width: 100%;
     }
 
